style/fix : heavy weight class to have visible caracter on landing page background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1845,3 +1845,7 @@ body.is-preload #footer {
     font-family: "Courier New", monospace;
     font-size: 0.9rem;
 }
+
+.heavy-weight {
+    font-weight: 700;
+}
